--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
   "homepage": "https://github.com/arungit0721/Cypress_Training#readme",
   "devDependencies": {
     "cypress": "^15.7.0"
+  },
+  "dependencies": {
+    "express": "^5.1.0"
   }
 }
